--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this the shop with node.js with mongodb",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon node app.js"
   },
   "author": "mee",
   "license": "ISC",
